--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,14 @@ edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[env]
+SLINT_STYLE = 'cosmic'
+
 [dependencies]
-slint = "1.11.0"
+slint = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7ec8d2f6f2e665fd429f2b" }
 freedesktop-desktop-entry = "=0.7.11"
+shlex = "1.3.0"
 
 [build-dependencies]
-slint-build = "1.11.0"
+slint-build = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7ec8d2f6f2e665fd429f2b" }
