--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ SLINT_STYLE = 'cosmic'
 slint = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7ec8d2f6f2e665fd429f2b" }
 freedesktop-desktop-entry = "=0.7.11"
 shlex = "1.3.0"
-
+freedesktop-icons = "0.3.1"
 [build-dependencies]
 slint-build = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7ec8d2f6f2e665fd429f2b" }
