--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ap"
+name = "comic-wanderer"
 version = "0.1.0"
 edition = "2024"
 
@@ -8,11 +8,13 @@ slint = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7e
 freedesktop-desktop-entry = "=0.7.11"
 shlex = "1.3.0"
 freedesktop-icons = "0.3.1"
-fuzzy-matcher = "*"
+fuzzy-matcher = "0.3.7"
+termion = "4.0.5"
 
 [build-dependencies]
 slint-build = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7ec8d2f6f2e665fd429f2b" }
 
 [profile.release]
-lto = true
-opt-level = "z"        # or "s" for better speed/size tradeoff
+lto = "fat"
+opt-level = 3         # Highest speed optimization
+strip = true 
