--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ libc = "0.2"
 serde = { version = "1", features = ["derive"] }
 toml = "0.8"
 dirs = "5"
+notify-rust = "4"
 
 [build-dependencies]
 slint-build = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7ec8d2f6f2e665fd429f2b" }
