--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-slint = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7ec8d2f6f2e665fd429f2b"}
+slint = "=1.11.0"
 freedesktop-desktop-entry = "=0.7.11"
 shlex = "1.3.0"
 freedesktop-icons = "0.3.1"
@@ -20,10 +20,12 @@ notify-rust = "4"
 config = "0.15.11"
 
 [build-dependencies]
-slint-build = { git = "https://github.com/slint-ui/slint", rev = "c18b3cf02fc6a8d45e7ec8d2f6f2e665fd429f2b" }
+slint-build = "=1.11.0"
 
 [profile.release]
 lto = "fat"
-opt-level = 3  
+opt-level = 3
 strip = true 
 codegen-units = 1
+debug = 0
+debug-assertions = false
