--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ toml = "0.8"
 dirs = "5"
 notify-rust = "4"
 notify = "8.1.0"
+parking_lot = "0.12"
 config = "0.15.11"
 
 [build-dependencies]
@@ -25,7 +26,7 @@ slint-build = "1.12.1"
 
 [profile.release]
 lto = "fat"
-opt-level = "z"
+opt-level = 3
 strip = true 
 codegen-units = 1
 debug = 0
