--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-slint = "1.12.1"
+slint = {version = "~1.14", features = []}
 freedesktop-desktop-entry = "=0.7.11"
 shlex = "1.3.0"
 freedesktop-icons = "0.3.1"
@@ -22,7 +22,7 @@ parking_lot = "0.12"
 config = "0.15.11"
 
 [build-dependencies]
-slint-build = "1.12.1"
+slint-build = "~1.14"
 
 [profile.release]
 lto = "fat"
